// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-eqUAAy eAZymO"
>
  <div
    class="sc-dcJsrY ksKAgc"
  >
    <span
      class="sc-iGgWBj"
    >
      0
    </span>
    <span
      class="sc-gsFSXq keCQZs"
    >
      42
    </span>
  </div>
  <button
    class="sc-aXZVg sc-gEvEer euGawu byLjvs"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-eqUAAy eAZymO"
>
  <div
    class="sc-fqkvVR bXguSx"
  >
    🛌🛌
  </div>
  <button
    class="sc-aXZVg sc-gEvEer dWLgId byLjvs"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-eqUAAy eAZymO"
>
  <div
    class="sc-fqkvVR bXguSx"
  >
    🍅
  </div>
  <button
    class="sc-aXZVg sc-gEvEer dWLgId byLjvs"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-eqUAAy eAZymO"
>
  <div
    class="sc-fqkvVR bXguSx"
  >
    🛌
  </div>
  <button
    class="sc-aXZVg sc-gEvEer dWLgId byLjvs"
  >
    Start
  </button>
</div>
`;
